--- a/index.html
+++ b/index.html
@@ -87,5 +87,9 @@
         </div>
       </div>
     </section>
+    <footer class="footer__final">
+      <p class="footer__texto">Copyright© 2024</p>
+
+    </footer>
   </body>
 </html>
