Datos de los Docentes
Se agrego la información del primer docente

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="galeria__overlay" data-accion="cerrar-galeria">
         <div class="galeria__contenedor">
           <div class="galeria__contenedor-titulo">
-            <h3 class="galeria__titulo"></h3>
+            <h3 class="galeria__nombre"></h3>
             <button class="galeria__btn" data-accion="cerrar-galeria">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -77,11 +77,11 @@
             <img src="" class="galeria__imagen" />
           </div>
           <div class="galeria__contenedor-docente">
-            <p class="galeria__descripcion-imagen-activa"></p>
-            <ul class="galeria__contenedor-">
-              <!-- <li class="elemento-1">Elemento 1</li>
-            <li class="elemento-2">Elemento 2</li>
-            <li class="elemento-3">Elemento 3</li> -->
+            <p class="galeria__nombre_citaciones">Nombreeeesaada</p>
+            <p class="galeria__nacionalidad"></p>
+            <p class="galeria__formacion"></p>
+            <p class="galeria__area-actuacion" ></p>
+            <p class="galeria__par-evaluador"></p>
             </ul>
           </div>
         </div>
