--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <!-- Barra de Navegación -->
       <div class="barranav__logo">
         <div class="barranav__boxlogo">
-          <img class="barranav__logo1" src="img/logoUcundiProyectos-2024.png" href="" alt="LogoPagina"/>
+          <img
+            class="barranav__logo1"
+            src="img/logoUcundiProyectos-2024.png"
+            href=""
+            alt="LogoPagina"
+          />
         </div>
       </div>
       <!-- Barra del menú -->
@@ -29,10 +34,10 @@
     <section class="caja-fondo1">
       <div class="caja-fondo1__info">
         <h1>Repositorio Institucional de la UCundinamarca</h1>
-        <h2>
+        <p>
           Proyectos de investigación del programa de Ingeniería de Sistemas y
           Computación<br />Sede Fusagasugá
-        </h2>
+        </p>
         <!-- <p>
         ProyectosISCFusa es un sistema de información centralizado mediante el
         cuál podrás visualizar y conocer los proyectos de investigación
@@ -46,7 +51,7 @@
 
     <!-- Fondo 2: Tarjetas de Profesores -->
     <div class="contenedor">
-      <h2>Docentes Investigadores</h2>
+      <h3>Conoce a tus docentes investigadores</h3>
       <div class="categorias" id="categorias">
         <!--Acá se anexan el div categoria con las fotos de los docentes a través de JS  -->
       </div>
@@ -73,23 +78,23 @@
               </svg>
             </button>
           </div>
-          <div class="galeria__contenedor-imagen-activa" id="imagenActiva">
-            <img src="" class="galeria__imagen" />
-          </div>
-          <div class="galeria__contenedor-docente">
-            <p class="galeria__nombre_citaciones">Nombreeeesaada</p>
-            <p class="galeria__nacionalidad"></p>
-            <p class="galeria__formacion"></p>
-            <p class="galeria__area-actuacion" ></p>
-            <p class="galeria__par-evaluador"></p>
-            </ul>
+          <div class="galeria__contenedor-biografia">
+            <div class="galeria__contenedor-imagen-activa" id="imagenActiva">
+              <img src="" class="galeria__imagen" />
+            </div>
+            <div class="galeria__contenedor-docente">
+              <p class="galeria__nombre_citaciones"></p>
+              <p class="galeria__nacionalidad"></p>
+              <p class="galeria__formacion"></p>
+              <p class="galeria__area-actuacion"></p>
+              <p class="galeria__par-evaluador"></p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <footer class="footer__final">
       <p class="footer__texto">Copyright© 2024</p>
-
     </footer>
   </body>
 </html>
