Diseño del fondo
Movimiento del fondo de los docentes

--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
     <!-- En esta sección se encuentran lo elementos que conforman el apartado de los docentes con la información de cada uno -->
     <section class="galeria" id="galeria">
       <div class="galeria__overlay" data-accion="cerrar-galeria">
+        <ul class="galeria__area-diseño">
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
         <div class="galeria__contenedor">
           <div class="galeria__contenedor-titulo">
             <h3 class="galeria__nombre"></h3>
