Diseño terminado de la información de los docentes
Se realizó el fondo de la información de los docentes y se llevo a cabo el diseño de la información

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- Fondo 1 pagina principal-->
     <section class="caja-fondo1">
       <div class="caja-fondo1__info">
-        <h1>Repositorio Institucional de la UCundinamarca</h1>
+        <h1>Sistema de información Institucional de la UCundinamarca</h1>
         <p>
           Proyectos de investigación del programa de Ingeniería de Sistemas y
           Computación<br />Sede Fusagasugá
@@ -94,13 +94,15 @@
             <div class="galeria__contenedor-imagen-activa" id="imagenActiva">
               <img src="" class="galeria__imagen" />
             </div>
-            <div class="galeria__contenedor-docente">
+            <div class="galeria__contenedor-docente1">
               <p class="galeria__nombre_citaciones"></p>
               <p class="galeria__nacionalidad"></p>
               <p class="galeria__formacion"></p>
-              <p class="galeria__area-actuacion"></p>
-              <p class="galeria__par-evaluador"></p>
             </div>
+          </div>
+          <div class="galeria__contenedor-docente">
+            <p class="galeria__area-actuacion"></p>
+            <p class="galeria__par-evaluador"></p>
           </div>
         </div>
       </div>
