Cambio estilo del dashboard1
Estilo dashb

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Repositorio Institucional - UCundinamarca</title>
   <!-- Enlace al archivo CSS externo -->
   <link rel="stylesheet" href="./public/bundle.css" />
+  <link rel="icon" type="image/png" href="../img/icono/Icono-UCundinamarca.png">
   <script defer src="./public/bundle.js"></script>
 </head>
 
