Cambios en el diseño
Se realizaron varios cambios en el diseño, se movió el contenedor de generales a categorias y se realizó el acercade

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Barra del menú -->
     <nav class="barranav__menu">
       <a href="/public/estadisticas.html">Estadísticas</a>
-      <a href="">Acerca de</a>
+      <a href="/public/acercade.html">Acerca de</a>
     </nav>
   </header>
   <!-- Fondo 1 pagina principal-->
@@ -35,14 +35,6 @@
         Proyectos de investigación del programa de Ingeniería de Sistemas y
         Computación<br />Sede Fusagasugá
       </p>
-      <!-- <p>
-        ProyectosISCFusa es un sistema de información centralizado mediante el
-        cuál podrás visualizar y conocer los proyectos de investigación
-        realizados por los docentes líderes de investigación que siguen
-        vigentes con sus proyectos desarrollados en la UCundinamarca. Conoce a
-        cada uno de ellos según el área de investigación de tu interés.
-      </p> -->
-      <!-- <img class="caja-fondo1__img1" src="img/img1investigacion.jpeg" alt="Fondo imagen1" /> -->
     </div>
   </section>
 
@@ -97,9 +89,12 @@
       </div>
     </div>
   </section>
-  <footer class="footer__final">
-    <p class="footer__texto">Copyright© 2024</p>
-  </footer>
 </body>
+<footer class="footer__final">
+  <h2>Contacto</h2>
+  <p>Para más información, contáctanos en <a
+      href="mailto:contacto@ucundinamarca.edu.co">contacto@ucundinamarca.edu.co</a>.</p>
+  <p class="footer__texto">Copyright© 2024</p>
+</footer>
 
 </html>
