--- a/public/estadisticas.html
+++ b/public/estadisticas.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Repositorio Institucional - UCundinamarca</title>
-    <link rel="stylesheet" href="bundle.css" />
-    <link rel="icon" type="image/png" href="../img/icono/Icono-UCundinamarca.png">
-    <script defer src="bundle.js"></script>
-  </head>
 
-  <body>
-    <!-- Encabezado Principal -->
-    <header class="barranav">
-      <!-- Barra de Navegación -->
-      <div class="barranav__logo">
-        <div class="barranav__boxlogo">
-          <a href="../index.html">
-            <img
-              class="barranav__logo1"
-              src="../img/logoUcundiProyectos-2024.png"
-              alt="LogoPagina"
-            />
-          </a>
-        </div>
-      </div>
-      <!-- Barra del menú -->
-      <nav class="barranav__menu">
-        <a href="estadisticas.html">Estadísticas</a>
-        <a href="">Acerca de</a>
-      </nav>
-    </header>
-    <div class="dashb">
-      <div class="dashb__uno">
-        <iframe class="dashb__frame" Graficas-Sistema_de_Informacion"
-          width="auto"
-          height="auto"
-          src="https://app.powerbi.com/view?r=eyJrIjoiOTc5ODVkMWQtNjI0MS00OGUxLTljNDUtOTU2YWFjMTVjZDhkIiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9"
-          frameborder="0"
-          allowfullscreen="true"
-        ></iframe>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Repositorio Institucional - UCundinamarca</title>
+  <link rel="stylesheet" href="bundle.css" />
+  <link rel="icon" type="image/png" href="../img/icono/Icono-UCundinamarca.png">
+  <script defer src="bundle.js"></script>
+</head>
+
+<body>
+  <!-- Encabezado Principal -->
+  <header class="barranav">
+    <!-- Barra de Navegación -->
+    <div class="barranav__logo">
+      <div class="barranav__boxlogo">
+        <a href="../index.html">
+          <img class="barranav__logo1" src="../img/logoUcundiProyectos-2024.png" alt="LogoPagina" />
+        </a>
       </div>
     </div>
-    <footer class="footer__final">
-      <p class="footer__texto">Copyright© 2024</p>
-    </footer>
-  </body>
+    <!-- Barra del menú -->
+    <nav class="barranav__menu">
+      <a href="../index.html">Inicio</a>
+      <a href="acercade.html">Acerca de</a>
+    </nav>
+  </header>
+  <div class="dashb">
+    <div class="dashb__uno">
+      <iframe class="dashb__frame" Graficas-Sistema_de_Informacion" width="auto" height="auto"
+        src="https://app.powerbi.com/view?r=eyJrIjoiOTc5ODVkMWQtNjI0MS00OGUxLTljNDUtOTU2YWFjMTVjZDhkIiwidCI6IjA3ZGE2N2EwLTFmNDMtNGU4Yy05NzdmLTVmODhiNjQ3MGVlNiIsImMiOjR9"
+        frameborder="0" allowfullscreen="true"></iframe>
+    </div>
+  </div>
+</body>
+<footer class="footer__final">
+  <h2>Contacto</h2>
+  <p>Para más información, contáctanos en <a
+      href="mailto:contacto@ucundinamarca.edu.co">contacto@ucundinamarca.edu.co</a>.</p>
+  <p class="footer__texto">Copyright© 2024</p>
+</footer>
+
 </html>
