--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Repositorio Institucional - UCundinamarca</title>
+  <title>Sistema de informacion Institucional | UCundinamarca</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Enlace al archivo CSS externo -->
   <link rel="stylesheet" href="./public/bundle.css" />
   <link rel="icon" type="image/png" href="../img/icono/Icono-UCundinamarca.png">
